<resources>
    <string name="app_name">Ryuzen Note 10120148</string>
    <string name="title_info">Info</string>
    <string name="title_notes">Notes</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="title_nama">Ariyandi Julian Pratama</string>
    <string name="title_nim">10120148</string>
    <string name="title_kelas">IF4</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="fragment_info">Fragment Info</string>
    <string name="tambah_catatan_baru">Tambah Catatan Baru</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="buka_catatan">Buka catatan</string>
</resources>