<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleNote"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryNote"
                android:text="@string/category"
                android:layout_below="@id/titleNote"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionNote"
                android:layout_below="@id/categoryNote"
                android:layout_marginVertical="10dp"
                android:ellipsize="end"
                android:maxWidth="280dp"
                android:maxLength="110"
                android:maxLines="2"
                android:text="@string/description"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateNote"
                android:layout_below="@id/descriptionNote"
                android:layout_alignParentStart="true"
                android:text="@string/date"
                android:textSize="12sp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/baseline_play_arrow_24"
                android:contentDescription="@string/buka_catatan" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>